--- a/flightlib/configs/vec_env.yaml
+++ b/flightlib/configs/vec_env.yaml
@@ -1,7 +1,7 @@
 env:
   seed: 1
   scene_id: 0  # 0 box environment, 3 natureforest
-  num_envs: 1
+  num_envs: 15
   num_threads: 10 
-  render: no 
+  render: yes
   start_rot: [0.0, 0.0, 0.0] 
